Fix Containor spacing and alignment

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
 
 .container {
   text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  background: #3f3f3f;
 }
 
 button {
